--- a/Application/app/build.gradle
+++ b/Application/app/build.gradle
@@ -27,9 +27,12 @@ dependencies {
 
     implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '21.3.0.0'
 
+    implementation group: 'io.javalin', name: 'javalin-bundle', version: '4.1.1'
+
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'cs631.bank.pooja.App'
+    mainClass = 'cs631.bank.pooja.JdbcOracleConnection'
 }
+
