--- a/Application/app/build.gradle
+++ b/Application/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'cs631.bank.pooja.JdbcOracleConnection'
+    // mainClass = 'cs631.bank.Group3.ApiApp'
 }
 
