working hello world example with setup script

--- a/Bank-UI/package.json
+++ b/Bank-UI/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "Bank-UI",
+  "name": "bank",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "vite": "2.7.1",
-    
+
     "@vue/compiler-sfc": "^3.0.4",
     "@vitejs/plugin-vue": "^1.10.2"
   }
