--- a/Bank-UI/package.json
+++ b/Bank-UI/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "naive-ui": "^2.21.5",
     "vfonts": "^0.1.0",
     "vue": "^3.2.23"
